--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid nav-style">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -20,7 +20,7 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#/">Home<span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="#/">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
 
