--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#/">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-
+          <li><a href="#/about">About</a></li>
+          <li><a href="#/contact">Contact</a></li>
           <li class="dropdown">
             <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category<span class="caret"></span></a>
             <ul ng-model="searchText" class="dropdown-menu">
@@ -45,7 +44,6 @@
           <div class="form-group">
             <input type="text" class="form-control" ng-model="searchText.name" placeholder="Search by name">
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
         </form>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
