--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <title>Backpacker</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
+<div id="background_Picture">
+
+
   <nav class="navbar navbar-default">
     <div class="container-fluid nav-style">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -50,7 +51,7 @@
     </div><!-- /.container-fluid -->
   </nav>
 <body>
-  <div class="background-color margin-main-page" ng-view></div>
+  <div class="margin-main-page" ng-view></div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -60,4 +61,5 @@
     <script src="controllers/main_controller.js" ></script>
     <script src="controllers/checkout_controller.js"></script>
   </body>
+</div>
 </html>
