updated nav bar style

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="meanTea">
+<html ng-app="backpacker">
   <head>
     <meta charset="utf-8">
     <title>Backpacker</title>
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
 <div id="background_Picture">
-
-
-  <nav class="navbar navbar-default">
+  <nav class="navbar ">
     <div class="container-fluid nav-style">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
